GUAC-326: Add support for text input. Fix bug in handling of Ctrl-Alt-Shift (keys need to be released).

--- a/guacamole/src/main/webapp/styles/client.css
+++ b/guacamole/src/main/webapp/styles/client.css
@@ -543,6 +543,7 @@ p.hint {
     width: 480px;
     background: #EEE;
     box-shadow: inset -1px 0 2px white, 1px 0 2px black;
+    z-index: 10;
 }
 
 #menu .content {
